# path

./: .gitmodules  Base.path-package  LICENSE  README.md  cabal.project  path.cabal
pathc/: Main.hs
src/: Main.hs
src/Base/: Applicative.path  Bool.path  Either.path  Fin.path  Fix.path  Function.path  Functor.path  Lazy.path  List.path  Maybe.path  Monad.path  Nat.path  Pair.path  Pointed.path  Sigma.path  Unit.path  Vector.path  Void.path
src/Control/Carrier/Parser/: Church.hs
src/Control/Carrier/Readline/: Haskeline.hs
src/Control/Effect/: Parser.hs  Readline.hs  Stack.hs
src/Control/Monad/: Module.hs
src/Path/: AlphaEquivalent.hs  Back.hs  CLI.hs  Check.hs  Constraint.hs  Context.hs  Core.hs  Decl.hs  Desugar.hs  Elab.hs  Env.hs  Error.hs  Eval.hs  Expr.hs  Fin.hs  FreeVariables.hs  Implicit.hs  Lexer.hs  Meta.hs  MetaContext.hs  Module.hs  Name.hs  Namespace.hs  Nat.hs  Package.hs  Parser.hs  Partial.hs  Plicity.hs  Pretty.hs  Problem.hs  REPL.hs  Recursive.hs  Renamer.hs  Resources.hs  Scope.hs  Semiring.hs  Solver.hs  Span.hs  Stack.hs  Subst.hs  (+9 more)
src/Path/Parser/: Command.hs  Mixfix.hs  Module.hs  Package.hs  REPL.hs  Term.hs
src/Path/REPL/: Command.hs
