name:                path
version:             0.1.0.0
-- synopsis:
-- description:
license:             BSD3
license-file:        LICENSE
author:              Rob Rix
maintainer:          rob.rix@me.com
copyright:           2018 Rob Rix
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     Path.CLI
                     , Path.Constraint
                     , Path.Context
                     , Path.Core
                     , Path.Elab
                     , Path.Error
                     , Path.Eval
                     , Path.Module
                     , Path.Name
                     , Path.Namespace
                     , Path.Package
                     , Path.Parser
                     , Path.Parser.Mixfix
                     , Path.Parser.Module
                     , Path.Parser.Package
                     , Path.Parser.REPL
                     , Path.Parser.Term
                     , Path.Plicity
                     , Path.Pretty
                     , Path.Problem
                     , Path.Renamer
                     , Path.REPL
                     , Path.REPL.Command
                     , Path.Resources
                     , Path.Scope
                     , Path.Semiring
                     , Path.Solver
                     , Path.Span
                     , Path.Stack
                     , Path.Surface
                     , Path.Usage
  other-modules:       Paths_path
  -- other-extensions:
  build-depends:       ansi-wl-pprint
                     , base >=4.11 && <4.13
                     , bytestring
                     , containers
                     , directory
                     , filepath
                     , fused-effects >= 0.3 && < 0.4
                     , haskeline
                     , indentation-trifecta
                     , mtl
                     , optparse-applicative
                     , parsers
                     , terminal-size
                     , text
                     , trifecta
                     , unordered-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Weverything -Wno-missing-local-signatures -Wno-missing-import-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wno-name-shadowing -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations
  if (impl(ghc >= 8.4))
    ghc-options:       -Wno-missing-export-lists
  if (impl(ghc >= 8.6))
    ghc-options:       -Wno-star-is-type

executable pathc
  main-is:             Main.hs
  build-depends:       path
  hs-source-dirs:      pathc
  default-language:    Haskell2010
  ghc-options:         -Weverything -Wno-missing-local-signatures -Wno-missing-import-lists -Wno-implicit-prelude -Wno-safe -Wno-unsafe -Wno-name-shadowing -Wno-monomorphism-restriction -Wno-missed-specialisations -Wno-all-missed-specialisations
  if (impl(ghc >= 8.4))
    ghc-options:       -Wno-missing-export-lists
  if (impl(ghc >= 8.6))
    ghc-options:       -Wno-star-is-type


test-suite doctest
  type:                exitcode-stdio-1.0
  main-is:             Doctest.hs
  build-depends:       base >=4.9 && <4.13
                     , doctest >=0.7 && <1.0
                     , path
                     , QuickCheck
  hs-source-dirs:      test
  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/robrix/path
